# imgpush

./: .gitignore  Dockerfile  README.md  ci.sh  nginx.conf  pyproject.toml
.github/workflows/: ci.yml  docker.yml
app/: app.py  entrypoint.sh  imgpush.py  settings.py  video.py
app/tests/: test_app.py  test_video.py
stubs/slowapi/: __init__.pyi  errors.pyi
stubs/wand/: image.pyi
