[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[project]
name = "imgpush"
version = "1.0.0"
description = "Image upload and processing service"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn==0.34.0",
    "python-multipart==0.0.20",
    "slowapi==0.1.9",
    "aiofiles==24.1.0",
    "filetype==1.2.0",
    "Wand==0.6.13",
    "timeout-decorator==0.5.0",
    "nudenet==2.0.9",
    "opencv-python-headless==4.10.0.84",
]

[project.optional-dependencies]
dev = [
    "basedpyright==1.31.3",
    "ruff==0.8.6",
    "pytest==8.3.4",
    "httpx==0.28.1",
    "types-pillow==10.2.0.20240822",
]

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingImports = "error"
reportMissingTypeStubs = "error"
reportUnusedImport = "error"
reportUnusedClass = "error"
reportUnusedFunction = "error"
reportUnusedVariable = "error"
reportDuplicateImport = "error"
reportOptionalMemberAccess = "error"
reportOptionalCall = "error"
reportOptionalIterable = "error"
reportOptionalContextManager = "error"
reportOptionalOperand = "error"
reportTypedDictNotRequiredAccess = "error"
reportPrivateImportUsage = "error"
reportGeneralTypeIssues = "error"
reportArgumentType = "error"
reportCallIssue = "error"
reportMissingParameterType = "error"
reportUntypedFunctionDecorator = "error"
reportUntypedClassDecorator = "error"
reportUntypedBaseClass = "error"
reportUnknownParameterType = "error"
reportUnknownArgumentType = "error"
reportUnknownLambdaType = "error"
reportUnknownVariableType = "error"
reportUnknownMemberType = "error"
reportImplicitStringConcatenation = "error"
reportUnnecessaryComparison = "error"
reportInconsistentConstructor = "error"
reportMissingModuleSource = "warning"
include = ["app"]
exclude = ["**/node_modules", "**/__pycache__", "venv", "**/tests"]
stubPath = "stubs"

[tool.ruff]
target-version = "py39"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "N",     # pep8-naming
    "SIM",   # flake8-simplify
    "TID",   # flake8-tidy-imports
    "RUF",   # Ruff-specific rules
]
ignore = [
    "E501",  # line too long - handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise from within except
    "SIM108", # ternary operator
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["app"]